[tool.poetry]
name = "hypermodern-kingparra"
version = "0.1.0"
description = "The hypermodern Python project"
authors = ["Chris King-Parra <chris@kingparra.work>"]
readme = "readme.rst"
license = "MIT"
packages = [{include = "hypermodern_kingparra", from = "src"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hypermodern-kingparra = "hypermodern_kingparra.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_kingparra"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
coverage = {extras = ["toml"], version = "^7.4.1"}
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
bpython = "^0.24"

